[package]
name = "octx"
version = "0.3.0"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
repository = "https://github.com/udzura/octx"
keywords = ["github", "cli", "etl"]
license-file = "LICENSE"
readme = "README.md"
description = "GitHub query & extracter (Enterprise ready)"
edition = "2018"

[dependencies]
url = "^0"
chrono = { version = "^0.4", features = ["serde"] }
anyhow = "1.0"
# octocrab = { path = "../../XAMPPRocky/octocrab" }
octocrab = { version = "0.8.13", default-features = false }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
# graphql_client = "0.9"
serde = { version = "1.0.106", features = ["derive"] }
serde_urlencoded = "0.7.0"
reqwest = { version = "0.11.0", default-features = false, features = ["rustls-tls", "json"] }
#prettytable-rs = "^0.7"
structopt = "^0.3"
envy = "^0.3"
log = "^0.4"
env_logger = "^0.8"
csv = "^1.1"
