[package]
name = "octx"
version = "0.7.0"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
repository = "https://github.com/pepabo/octx"
keywords = ["github", "cli", "etl"]
license-file = "LICENSE"
readme = "README.md"
description = "GitHub query & extracter (Enterprise ready)"
edition = "2018"

[dependencies]
url = { version = "^2.0", features = ["serde"] }
http = "1"
chrono = { version = "^0.4", features = ["serde"] }
anyhow = "1.0"
octocrab = "0.49"
jsonwebtoken = "10"
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_urlencoded = "0.7.0"
serde_json = "1.0"
structopt = "^0.3"
envy = "^0.3"
log = "^0.4"
env_logger = "^0.8"
csv = "^1.1"
